--- a/build.gradle
+++ b/build.gradle
@@ -2,12 +2,12 @@ group 'io.swagger'
 version '1.0.0'
 
 task wrapper(type: Wrapper) {
-    gradleVersion = '3.3'
+    gradleVersion = '4.4.1'
     distributionUrl = "https://services.gradle.org/distributions/gradle-$gradleVersion-all.zip"
 }
 
 buildscript {
-    ext.kotlin_version = '1.1.2'
+    ext.kotlin_version = '1.2.51'
 
     repositories {
         mavenCentral()
@@ -24,7 +24,7 @@ repositories {
 }
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
+    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     compile "com.squareup.moshi:moshi-kotlin:1.5.0"
     compile "com.squareup.moshi:moshi-adapters:1.5.0"
     compile "com.squareup.okhttp3:okhttp:3.8.0"
