--- a/build.gradle
+++ b/build.gradle
@@ -2,12 +2,12 @@ group 'io.swagger'
 version '1.0.0'
 
 task wrapper(type: Wrapper) {
-    gradleVersion = '4.4.1'
+    gradleVersion = '4.10.2'
     distributionUrl = "https://services.gradle.org/distributions/gradle-$gradleVersion-all.zip"
 }
 
 buildscript {
-    ext.kotlin_version = '1.2.51'
+    ext.kotlin_version = '1.3.+'
 
     repositories {
         mavenCentral()
